force-app/main/default/objects/FieloPLT__Member__c/FieloPLT__Member__c.object-meta.xml
<CustomObject>
    <description>Members are the people or entities registered in your Program.</description>
    <label>Member</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>