force-app/main/default/objects/FieloPLT__Member__c/fields/FieloPLT__Account__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Salesforce Account related to the Member.</description>
    <inlineHelpText>Enter the name of a Salesforce Account related to the Member.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <type>Lookup</type>
</CustomField>