force-app/main/default/objects/FieloPLT__Member__c/fields/FieloPLT__Agreement__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Agreement.</description>
    <inlineHelpText>Related Agreement.</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>FieloPLT__Agreement__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <type>Lookup</type>
</CustomField>