force-app/main/default/objects/FieloPLT__Member__c/fields/FieloPLT__Contact__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Salesforce CRM Contact.</description>
    <inlineHelpText>Related Salesforce CRM Contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <type>Lookup</type>
</CustomField>