force-app/main/default/objects/FieloPLT__Member__c/fields/FieloPLT__CurrentLevelMember__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__CurrentLevelMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It relates a Level to a Member.</description>
    <inlineHelpText>It relates a Level to a Member.</inlineHelpText>
    <label>Level Member</label>
    <referenceTo>FieloPLT__LevelMember__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <type>Lookup</type>
</CustomField>