force-app/main/default/objects/FieloPLT__Member__c/fields/FieloPLT__Email__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Email__c</fullName>
    <description>Member&apos;s email address</description>
    <inlineHelpText>Enter the Member&apos;s email address.</inlineHelpText>
    <label>E-Mail</label>
    <type>Email</type>
</CustomField>