force-app/main/default/objects/FieloPLT__Member__c/fields/FieloPLT__Image__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Image__c</fullName>
    <description>Member image.</description>
    <inlineHelpText>Member image.</inlineHelpText>
    <label>Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>