force-app/main/default/objects/FieloPLT__Member__c/fields/FieloPLT__IsManager__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__IsManager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When ticked, Member is a Manager of Fielo Organization Member.</description>
    <inlineHelpText>When ticked, Member is a Manager of Fielo Organization Member.</inlineHelpText>
    <label>Manager</label>
    <type>Checkbox</type>
</CustomField>