force-app/main/default/objects/FieloPLT__Member__c/fields/FieloPLT__LastTransactionDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__LastTransactionDate__c</fullName>
    <description>Member&apos;s last transaction date.</description>
    <inlineHelpText>Member&apos;s last transaction date.</inlineHelpText>
    <label>Last Transaction Date</label>
    <type>Date</type>
</CustomField>