force-app/main/default/objects/FieloPLT__Member__c/fields/FieloPLT__MemberRecord__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__MemberRecord__c</fullName>
    <formula>1</formula>
    <label>Member Record</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>