force-app/main/default/objects/FieloPLT__Member__c/fields/FieloPLT__OrganizationAccount__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__OrganizationAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An Organization Member linked to an Organization Contributor Member.</description>
    <inlineHelpText>If the Member is an Organization Contributor, choose the Organization Member he or she is associated with.</inlineHelpText>
    <label>Organization Member</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Member must be an &quot;Organization Account&quot; and belong to the same Program.</errorMessage>
        <filterItems>
            <field>FieloPLT__Member__c.FieloPLT__Type__c</field>
            <operation>equals</operation>
            <value>Organization Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Members (Organization Account)</relationshipLabel>
    <relationshipName>FieloAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>