force-app/main/default/objects/FieloPLT__Member__c/fields/FieloPLT__Points__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Points__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Member&apos;s points.</description>
    <inlineHelpText>Member&apos;s points.</inlineHelpText>
    <label>Points</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>