force-app/main/default/objects/FieloPLT__Member__c/fields/FieloPLT__Program__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Program that the Member belongs to.</description>
    <inlineHelpText>The Program that the Member belongs to</inlineHelpText>
    <label>Program</label>
    <referenceTo>FieloPLT__Program__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <type>Lookup</type>
</CustomField>