force-app/main/default/objects/FieloPLT__Member__c/fields/FieloPLT__Status__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Status__c</fullName>
    <description>Member&apos;s status: Active, Blocked, Pending or Submitted for Approval.</description>
    <inlineHelpText>Choose Member&apos;s status: Active, Blocked, Pending or Submitted for Approval.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Ativo</label>
            </value>
            <value>
                <fullName>Inativo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>