force-app/main/default/objects/FieloPLT__Member__c/fields/FieloPLT__Type__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Type__c</fullName>
    <description>The type of Member: Individual (physical person or sole proprietorship), Organization Contributor Member (physical person contributing to an organization) or Organization Member (a company or entity).</description>
    <inlineHelpText>Choose what kind of Member this is: Individual (physical person or sole proprietorship), Organization Contributor Member (physical person contributing to an organization) or Organization Member (a company or entity).</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual Account</fullName>
                <default>true</default>
                <label>Individual Member</label>
            </value>
            <value>
                <fullName>Organization Account</fullName>
                <label>Organization Member</label>
            </value>
            <value>
                <fullName>Organization Contributor</fullName>
                <label>Organization Contributor Member</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>