force-app/main/default/objects/FieloPLT__Member__c/fields/FieloPLT__User__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Member&apos;s User.</description>
    <inlineHelpText>Enter the Member&apos;s User.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Members</relationshipName>
    <type>Lookup</type>
</CustomField>