force-app/main/default/objects/FieloPLT__Member__c/fields/V_Area__c.field-meta.xml
<CustomField>
    <fullName>V_Area__c</fullName>
    <description>Área do participante.</description>
    <inlineHelpText>Área do participante.</inlineHelpText>
    <label>Área</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VERTICAIS</fullName>
            </value>
            <value>
                <fullName>REGIÕES</fullName>
            </value>
            <value>
                <fullName>MULTI CANAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>