force-app/main/default/objects/FieloPLT__Member__c/fields/V_BadgeEliteCongelado__c.field-meta.xml
<CustomField>
    <fullName>V_BadgeEliteCongelado__c</fullName>
    <description>Congela as badges do participante</description>
    <label>Badges Elite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>