force-app/main/default/objects/FieloPLT__Member__c/fields/V_BadgeEngajamentoCongelado__c.field-meta.xml
<CustomField>
    <fullName>V_BadgeEngajamentoCongelado__c</fullName>
    <description>Congela as bafge engajamento do participante</description>
    <label>Badges Engajamento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>