force-app/main/default/objects/FieloPLT__Member__c/fields/V_BadgeYouBetCongelado__c.field-meta.xml
<CustomField>
    <fullName>V_BadgeYouBetCongelado__c</fullName>
    <description>Congela as youbets do badge do participante</description>
    <label>Badges Youbet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>