force-app/main/default/objects/FieloPLT__Member__c/fields/V_BetcoinsComp__c.field-meta.xml
<CustomField>
    <fullName>V_BetcoinsComp__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Saldo de betcoins (extras) do participante.Saldo de pontos gerado pela iniciativa Youbet Complementar.</description>
    <inlineHelpText>Saldo de betcoins (extras) do participante.Saldo de pontos gerado pela iniciativa Youbet Complementar.</inlineHelpText>
    <label>Betcoins - Extra</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>