force-app/main/default/objects/FieloPLT__Member__c/fields/V_Cargo__c.field-meta.xml
<CustomField>
    <fullName>V_Cargo__c</fullName>
    <description>Cargo atual do participante.</description>
    <inlineHelpText>Cargo atual do participante.</inlineHelpText>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>V_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COORDENADOR | GERENTE REGIONAL VIP</fullName>
            </value>
            <value>
                <fullName>DIRETOR</fullName>
            </value>
            <value>
                <fullName>GERENTE DE CONTAS</fullName>
            </value>
            <value>
                <fullName>LÍDER</fullName>
            </value>
            <value>
                <fullName>COORDENADOR II</fullName>
                <isActive>false</isActive>
                <label>COORDENADOR II</label>
            </value>
            <value>
                <fullName>GERENTE DE VENDAS</fullName>
                <isActive>false</isActive>
                <label>GERENTE DE VENDAS</label>
            </value>
            <value>
                <fullName>VICE-PRESIDENTE</fullName>
                <isActive>false</isActive>
                <label>VICE-PRESIDENTE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>