force-app/main/default/objects/FieloPLT__Member__c/fields/V_CargoDetalhado__c.field-meta.xml
<CustomField>
    <fullName>V_CargoDetalhado__c</fullName>
    <description>Cargo detalhado do participante.</description>
    <inlineHelpText>Cargo detalhado do participante.</inlineHelpText>
    <label>Cargo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>