force-app/main/default/objects/FieloPLT__Member__c/fields/V_CargoLiderImediato__c.field-meta.xml
<CustomField>
    <fullName>V_CargoLiderImediato__c</fullName>
    <description>Cargo do Líder imediato atual do participante.</description>
    <formula>TEXT(V_LiderImediato__r.V_Cargo__c)</formula>
    <inlineHelpText>Cargo do Líder imediato atual do participante.</inlineHelpText>
    <label>Cargo do Líder Imediato</label>
    <type>Text</type>
</CustomField>