force-app/main/default/objects/FieloPLT__Member__c/fields/V_CodigoCarteira__c.field-meta.xml
<CustomField>
    <fullName>V_CodigoCarteira__c</fullName>
    <description>Código de carteira atual do participante.</description>
    <externalId>true</externalId>
    <inlineHelpText>Código de carteira atual do participante.</inlineHelpText>
    <label>Código Carteira</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>