force-app/main/default/objects/FieloPLT__Member__c/fields/V_CodigoDiretorLideranca__c.field-meta.xml
<CustomField>
    <fullName>V_CodigoDiretorLideranca__c</fullName>
    <label>Código Diretor Liderança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>