force-app/main/default/objects/FieloPLT__Member__c/fields/V_CodigoGerenteRegional__c.field-meta.xml
<CustomField>
    <fullName>V_CodigoGerenteRegional__c</fullName>
    <label>Código Gerente Regional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>