force-app/main/default/objects/FieloPLT__Member__c/fields/V_CodigoLeaderSetor__c.field-meta.xml
<CustomField>
    <fullName>V_CodigoLeaderSetor__c</fullName>
    <label>Código Leader Setor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>