force-app/main/default/objects/FieloPLT__Member__c/fields/V_DataContratacao__c.field-meta.xml
<CustomField>
    <fullName>V_DataContratacao__c</fullName>
    <description>Data em que o participante foi contratado na Serasa Experian.</description>
    <inlineHelpText>Data em que o participante foi contratado na Serasa Experian.</inlineHelpText>
    <label>Data de Contratação</label>
    <type>Date</type>
</CustomField>