force-app/main/default/objects/FieloPLT__Member__c/fields/V_DataSumarizador__c.field-meta.xml
<CustomField>
    <fullName>V_DataSumarizador__c</fullName>
    <description>Campo utilizado para mostrar a partir de qual data deve-se criar o sumarizador do participante.</description>
    <label>Data Sumarizador</label>
    <type>Date</type>
</CustomField>