force-app/main/default/objects/FieloPLT__Member__c/fields/V_ElegivelElite__c.field-meta.xml
<CustomField>
    <fullName>V_ElegivelElite__c</fullName>
    <description>Indica se o participante está elegível ao Elite no ano fiscal vigente.</description>
    <formula>V_MetasAnoFiscalVigenteNovo__r.V_ElegivelAoElite__c</formula>
    <inlineHelpText>Indica se o participante está elegível ao Elite no ano fiscal vigente.</inlineHelpText>
    <label>Elegível ao Elite?</label>
    <type>Checkbox</type>
</CustomField>