force-app/main/default/objects/FieloPLT__Member__c/fields/V_FirstAccess__c.field-meta.xml
<CustomField>
    <fullName>V_FirstAccess__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Utilizado para validar se é o primeiro acesso do member, para validar se, durante o primeiro login, devemos solicitar o nome de tratamento.</description>
    <label>Primeiro Acesso</label>
    <type>Checkbox</type>
</CustomField>