force-app/main/default/objects/FieloPLT__Member__c/fields/V_IDAnoFiscalVigente__c.field-meta.xml
<CustomField>
    <fullName>V_IDAnoFiscalVigente__c</fullName>
    <description>Id do registro de metas do ano fiscal vigente. Utilizado em Process Builder.</description>
    <formula>V_MetasAnoFiscalVigenteNovo__r.Id</formula>
    <inlineHelpText>Id do registro de metas do ano fiscal vigente.</inlineHelpText>
    <label>ID Ano Fiscal Vigente</label>
    <type>Text</type>
</CustomField>