force-app/main/default/objects/FieloPLT__Member__c/fields/V_IdContatoEspelho__c.field-meta.xml
<CustomField>
    <fullName>V_IdContatoEspelho__c</fullName>
    <description>Campo criado para atualização das informações do &quot;Contato-Espelho&quot;</description>
    <formula>FieloPLT__Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id (Contato-Espelho)</label>
    <type>Text</type>
</CustomField>