force-app/main/default/objects/FieloPLT__Member__c/fields/V_IDSFUltimoAF__c.field-meta.xml
<CustomField>
    <fullName>V_IDSFUltimoAF__c</fullName>
    <description>ID SF do último ano fiscal criado. Campo atualizado por workflow.</description>
    <inlineHelpText>ID SF do último ano fiscal criado.</inlineHelpText>
    <label>ID SF - Último Ano Fiscal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>