force-app/main/default/objects/FieloPLT__Member__c/fields/V_IdUsuario__c.field-meta.xml
<CustomField>
    <fullName>V_IdUsuario__c</fullName>
    <formula>FieloPLT__User__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id (Usuário)</label>
    <type>Text</type>
</CustomField>