force-app/main/default/objects/FieloPLT__Member__c/fields/V_Lideranca__c.field-meta.xml
<CustomField>
    <fullName>V_Lideranca__c</fullName>
    <description>Liderança do participante. Campo dependente do campo &quot;Área&quot;.</description>
    <inlineHelpText>Liderança do participante. Campo dependente do campo &quot;Área&quot;.</inlineHelpText>
    <label>Liderança</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>V_Area__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>MULTI SECTOR</fullName>
            </value>
            <value>
                <fullName>REGIÕES</fullName>
            </value>
            <value>
                <fullName>MULTI CANAL</fullName>
            </value>
            <value>
                <fullName>VAREJO, CPG E PAGAMENTOS</fullName>
            </value>
            <value>
                <fullName>BANCOS E FINANCEIRAS</fullName>
            </value>
            <value>
                <fullName>SERASA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>