force-app/main/default/objects/FieloPLT__Member__c/fields/V_LiderImediato__c.field-meta.xml
<CustomField>
    <fullName>V_LiderImediato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Líder imediato atual do participante.</description>
    <inlineHelpText>Líder imediato atual do participante.</inlineHelpText>
    <label>Líder Imediato</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Liderados Imediatos</relationshipLabel>
    <relationshipName>Lider_Imediato</relationshipName>
    <type>Lookup</type>
</CustomField>