force-app/main/default/objects/FieloPLT__Member__c/fields/V_MetasAnoFiscalVigenteNovo__c.field-meta.xml
<CustomField>
    <fullName>V_MetasAnoFiscalVigenteNovo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Exibe a identificação do ano fiscal vigente do participante.</description>
    <inlineHelpText>Exibe a identificação do ano fiscal vigente do participante.</inlineHelpText>
    <label>Metas do Ano Fiscal Vigente</label>
    <referenceTo>VN_MetaParticipante__c</referenceTo>
    <relationshipLabel>Participantes</relationshipLabel>
    <relationshipName>Participantes</relationshipName>
    <type>Lookup</type>
</CustomField>