force-app/main/default/objects/FieloPLT__Member__c/fields/V_MetaScoreEliteAFCongelado__c.field-meta.xml
<CustomField>
    <fullName>V_MetaScoreEliteAFCongelado__c</fullName>
    <description>Pega o score atual do participante para congelar o site.</description>
    <label>Score Atual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>