force-app/main/default/objects/FieloPLT__Member__c/fields/V_MetaScoreEliteAFProjetadoCongelado__c.field-meta.xml
<CustomField>
    <fullName>V_MetaScoreEliteAFProjetadoCongelado__c</fullName>
    <label>Score Projetado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>