force-app/main/default/objects/FieloPLT__Member__c/fields/V_NaoDeveReceberBadge__c.field-meta.xml
<CustomField>
    <fullName>V_NaoDeveReceberBadge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se assinalado, o participante não receberá badge no ano fiscal.</description>
    <inlineHelpText>Se assinalado, o participante não receberá badge no ano fiscal.</inlineHelpText>
    <label>Não Deve Receber Badge</label>
    <type>Checkbox</type>
</CustomField>