force-app/main/default/objects/FieloPLT__Member__c/fields/V_NomeTratamento__c.field-meta.xml
<CustomField>
    <fullName>V_NomeTratamento__c</fullName>
    <description>Nome que o participante prefere ser chamado. Campo a ser utilizado em comunicações com o participante. Esse campo será preenchido no momento do primeiro acesso do participante no portal.</description>
    <inlineHelpText>Nome que o participante prefere ser chamado. Campo a ser utilizado em comunicações com o participante. Esse campo será preenchido no momento do primeiro acesso do participante no portal.</inlineHelpText>
    <label>Nome de Tratamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>