force-app/main/default/objects/FieloPLT__Member__c/fields/V_NovoContratado__c.field-meta.xml
<CustomField>
    <fullName>V_NovoContratado__c</fullName>
    <description>Indica se o participante é um novo contratado ou não.</description>
    <inlineHelpText>Indica se o participante é um novo contratado ou não.</inlineHelpText>
    <label>Novo Contratado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>