force-app/main/default/objects/FieloPLT__Member__c/fields/V_PapelYoubet__c.field-meta.xml
<CustomField>
    <fullName>V_PapelYoubet__c</fullName>
    <label>Papel Youbet</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GERENTES DE CONTAS</fullName>
            </value>
            <value>
                <fullName>LÍDERES</fullName>
            </value>
            <value>
                <fullName>LÍDERES (COORDENADORES) E GERENTE REGIONAIS</fullName>
            </value>
            <value>
                <fullName>NÃO ELEGÍVEL</fullName>
                <default>true</default>
                <label>NÃO ELEGÍVEL</label>
            </value>
            <value>
                <fullName>DIRETORES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>