force-app/main/default/objects/FieloPLT__Member__c/fields/V_Ponderar__c.field-meta.xml
<CustomField>
    <fullName>V_Ponderar__c</fullName>
    <label>Ponderar?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>