force-app/main/default/objects/FieloPLT__Member__c/fields/V_PosicaoRankingCongelado__c.field-meta.xml
<CustomField>
    <fullName>V_PosicaoRankingCongelado__c</fullName>
    <description>Grava a posição do ranking congelado</description>
    <label>Posição no Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>