force-app/main/default/objects/FieloPLT__Member__c/fields/V_PosicaoRankingFY__c.field-meta.xml
<CustomField>
    <fullName>V_PosicaoRankingFY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Descontinuado - Posição Ranking FY</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>