force-app/main/default/objects/FieloPLT__Member__c/fields/V_PosicaoRankingYTD__c.field-meta.xml
<CustomField>
    <fullName>V_PosicaoRankingYTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Posição Ranking YTD</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>