force-app/main/default/objects/FieloPLT__Member__c/fields/V_Registro__c.field-meta.xml
<CustomField>
    <fullName>V_Registro__c</fullName>
    <description>Registro do participante. Campo utilizado pelo Planejamento para apuração de dados.</description>
    <externalId>true</externalId>
    <inlineHelpText>Registro do participante. Campo utilizado pelo Planejamento para apuração de dados.</inlineHelpText>
    <label>Registro</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>