force-app/main/default/objects/FieloPLT__Member__c/fields/V_RegistroParticipante__c.field-meta.xml
<CustomField>
    <fullName>V_RegistroParticipante__c</fullName>
    <description>Registro exclusivo do participante na Serasa Experian. Não aceita duplicidade de registros.</description>
    <externalId>true</externalId>
    <inlineHelpText>Registro exclusivo do participante na Serasa Experian. Não aceita duplicidade de registros.</inlineHelpText>
    <label>Login</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>