force-app/main/default/objects/FieloPLT__Member__c/fields/V_ScoreElite__c.field-meta.xml
<CustomField>
    <fullName>V_ScoreElite__c</fullName>
    <description>Score Elite do ano fiscal vigente.</description>
    <formula>V_MetasAnoFiscalVigenteNovo__r.V_ScoreElite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Score Elite do ano fiscal vigente.</inlineHelpText>
    <label>Score Elite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>