force-app/main/default/objects/FieloPLT__Member__c/fields/V_Setor__c.field-meta.xml
<CustomField>
    <fullName>V_Setor__c</fullName>
    <description>Campo dependente do campo &quot;Liderança&quot;.</description>
    <inlineHelpText>Campo dependente do campo &quot;Liderança&quot;.</inlineHelpText>
    <label>Setor</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>V_Lideranca__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BANCO DO BRASIL</fullName>
            </value>
            <value>
                <fullName>BRADESCO</fullName>
            </value>
            <value>
                <fullName>CAIXA ECONÔMICA</fullName>
            </value>
            <value>
                <fullName>ITAÚ</fullName>
            </value>
            <value>
                <fullName>SANTANDER</fullName>
            </value>
            <value>
                <fullName>BENS DURÁVEIS E SERVIÇOS</fullName>
            </value>
            <value>
                <fullName>COOPERATIVAS</fullName>
            </value>
            <value>
                <fullName>SETOR PÚBLICO</fullName>
            </value>
            <value>
                <fullName>TELECOM, MÍDIA E TECNOLOGIA</fullName>
            </value>
            <value>
                <fullName>UTILITIES</fullName>
            </value>
            <value>
                <fullName>BANCOS E FINANCEIRAS BR</fullName>
            </value>
            <value>
                <fullName>BANCOS E FINANCEIRAS SP</fullName>
            </value>
            <value>
                <fullName>SEGUROS</fullName>
            </value>
            <value>
                <fullName>CO, NO e NE</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>REGIÕES WINBACK</fullName>
            </value>
            <value>
                <fullName>RJ, MG e ES</fullName>
            </value>
            <value>
                <fullName>RS e SC</fullName>
            </value>
            <value>
                <fullName>SP I</fullName>
            </value>
            <value>
                <fullName>SP II</fullName>
            </value>
            <value>
                <fullName>SP INTERIOR</fullName>
            </value>
            <value>
                <fullName>CONVÊNIO SPC SERASA EXPERIAN</fullName>
            </value>
            <value>
                <fullName>DISTRIBUIDOR</fullName>
            </value>
            <value>
                <fullName>MULTICANAL WINBACK</fullName>
            </value>
            <value>
                <fullName>REMOTO</fullName>
            </value>
            <value>
                <fullName>VIP MG, CO e NO</fullName>
            </value>
            <value>
                <fullName>VIP RJ, ES e NE</fullName>
            </value>
            <value>
                <fullName>VIP SP I</fullName>
            </value>
            <value>
                <fullName>VIP SP II</fullName>
            </value>
            <value>
                <fullName>VIP SUL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>