force-app/main/default/objects/FieloPLT__Member__c/fields/V_SobrenomeUsuario__c.field-meta.xml
<CustomField>
    <fullName>V_SobrenomeUsuario__c</fullName>
    <description>Campo criado para o disparo de E-mail do primeiro acesso</description>
    <formula>FieloPLT__User__r.LastName</formula>
    <inlineHelpText>Campo criado para o disparo de E-mail do primeiro acesso</inlineHelpText>
    <label>Sobrenome (Usuário)</label>
    <type>Text</type>
</CustomField>