force-app/main/default/objects/FieloPLT__Member__c/fields/V_UltimoAnoFiscal__c.field-meta.xml
<CustomField>
    <fullName>V_UltimoAnoFiscal__c</fullName>
    <description>Indica o ano fiscal mais recente cadastrado em Metas dos Participantes relacionado a esse participante.</description>
    <inlineHelpText>Indica o ano fiscal mais recente cadastrado em Metas do Participantes relacionado a esse participante.</inlineHelpText>
    <label>Último Ano Fiscal</label>
    <summarizedField>VN_MetasParticipantes__c.V_Ano__c</summarizedField>
    <summaryForeignKey>VN_MetasParticipantes__c.V_Participante__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>